style.css
body {
    display: flex;
    flex-direction: column;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    margin: 0px;

}

#header {
    background-color: #1F2937;
    color: white;
    font-size: 20px;

    display: flex;
    justify-content: space-between;
    padding: 16px;
}

.links {
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
    color: white;
}


#section-1 {
    display: flex;
    justify-content: center;
    background-color: #1F2937;
    gap: 15px;
    align-items: center;
    padding: 20px 0px 40px 0px;
}

    #section-1 .left {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 250px;
        gap: 5px;
    }

    #section-1 .title {
        color: white;
        font-weight: bold;
        font-size: 20px;
    }

    #section-1 .text {
        color: rgb(238, 238, 238);
    }

    button.sign-up {
        width: 100px;
        flex-basis: 25px;
        background-color:rgb(21, 157, 248);
        border-radius: 8px;
    }

    #section-1 .right {
        /* the image */
        width: 125px;
        height: auto;
    }

#section-2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 16px;
    margin-bottom: 16px    
}

#section-2 .title {
    font-size: 20px;
    color: #1F2937;
    font-weight: bold;
    margin-top: 10px;

}

.container {
    display: flex;
    justify-content: center;
    align-items: baseline;
    gap: 15px;
}

.box {
    width: 175px;
    display: flex;
    flex-direction: column;
    justify-content: baseline;
    align-items: center;
}

.characters {
    width: 125px;
    height: auto;
}

.text {
    text-align: center;
    margin-top: 8px;
}


#section-3 {
    display: flex;
    flex-direction: column;
    background-color: #E5E7EB;
    height: 150px;
    align-items: center;
    justify-content: center;
}

.quote-container {
    display: flex;
    flex-direction: column;
    width: 600px;
    color: #1F2937;    

}

.quote {
    font-size: 30px;
    font-style: italic;

    width: 550px;
}

.author {
    align-self: flex-end;
    font-size: 24px;
    font-weight: 800;
    padding-right: 40px;
}


#section-4 {
    background-color: white;

    display: flex;
    justify-content: center;
    align-items: center;
    padding: 40px;
}

.blue-box {
    background-color: rgb(27, 124, 250);
    border-radius: 8px;

    width: 600px;
    height: 100px;

    padding: 20px;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.blue-title {
    color: white;
    font-size: 20px;
    font-weight: 900;
    padding: 25px;
}

.blue-title .blue-text {
    color: white;
    font-weight: 500;
    font-size: 16px;
    margin: 8px 8px 8px auto;
    
}

.ice-king {
    height: 120px;
    width: auto;
}


.footer {
    background-color: #1F2937;
    color: white;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
}

